--- a/config.env
+++ b/config.env
@@ -1,4 +1,5 @@
 PORT = 4200
-DATABASE =  mongodb://localhost:27017/luxury-service
+
 JWT_SECRET =  secret
 jwtExpire = 12h
+DB_PATH = mongodb+srv://faisalrahman:faisalrahman6472@cluster0.gmdhy.mongodb.net/luxury-service?retryWrites=true&w=majority
